# bdd-test-framework

./: README.md  pytest.ini  requirements.txt  run.sh  run_bdd_tests.sh  run_tests.sh  setup.cfg
.github/workflows/: tests.yml
my_app/: autoapp.py  server.py  settings.py
my_app/users/: __init__.py  views.py
my_app/users/services/: nbp.py
tests/: config.py  conftest.py  fixtures.py  my_app_service.py  test_bdd_users.py  test_users.py
tests/features/: etl.feature  users.feature
