[metadata]
name = my-app-server
version = file:VERSION
author = Piotr Przetacznik
author_email = "piotr.przetacznik+bdd@gmail.com",
long_description = file:README.md
url = https://github.com/pprzetacznik/bdd-test-framework
keywords =
    bdd
    tests
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: End Users/Desktop
    Intended Audience :: Customer Service
    License :: Other/Proprietary License
    Programming Language :: Python :: 3.11
    Topic :: System :: Monitoring
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Testing :: BDD
license_files =
    LICENSE

[bdist_wheel]
universal = 0
